--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -2,7 +2,7 @@
 
 <section class="actor-search">
   <h3>Search by Actor/Actress</h3>
-  <%= form_tag '/movie_search' do %>
+  <%= form_tag "/movie_search" do %>
     <%= radio_button_tag(:search_type, "best") %>
     <%= label_tag(:best, "Best Movies") %>
     <%= radio_button_tag(:search_type, "worst") %>
