refactor actor addition

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+
+    <div class="main_menu">
+      <a class='btn' href='/'>New Search</a>
+    </div>
     <%= yield %>
   </body>
 </html>
