--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,17 +25,22 @@
 }
 .grid-container {
   display: grid;
-  grid-row-gap: 40px;
+  /* grid-row-gap: 40px; */
   grid-template-columns: 250px 40vw auto;
   padding: 10px;
+  background-color: rgba(0,0,0,0.3);
+  border-radius: 2px;
+  border: 0.5px solid goldenrod;
 }
-
+.padded {
+  padding-bottom: 10px;
+}
 .ratings {
   border-collapse: separate;
   /* border-spacing: 50px; */
 }
 .ratings td {
-  padding: 0 40px;
+  padding: 0 20px;
   left: 0;
 }
 
@@ -44,4 +49,44 @@ body{
   background: black;
   background-image: url("https://i.pinimg.com/originals/d8/21/18/d82118622556ca08f26d20e45856029a.jpg");
   font-family: helvetica;
+}
+
+.next_button {
+  background-color: black;
+  color:white;
+  font-weight: bold;
+  height: 30px;
+  width: 120px;
+}
+.btn {
+  float:left;
+  color:black;
+  background-color: goldenrod;
+  text-decoration:none;
+  padding: 11px;
+  border: 3px;
+  border-radius: 5px;
+}
+.btn:hover {
+  background-color: #ddd;
+  color: black;
+}
+.main_menu {
+  font-family:"Arial";
+  /* background-color:black; */
+  overflow:hidden;
+  height: 40px;
+  width: 200vw;
+  position:fixed;
+  z-index: +1
+ }
+.content {
+  position:relative;
+  top: 50px;
+  /* overflow:hidden; */
+  overflow: scroll;
+  height: 90vh;
+}
+.ital {
+  font-style: italic;
 }
