--- a/app/views/movie_search/index.html.erb
+++ b/app/views/movie_search/index.html.erb
@@ -1,30 +1,40 @@
-
-<h1> <%= @actor.titleize %>'s <%=@type.capitalize %> movies </h1>
-<% @movies.each do |movie| %>
-  <div class="grid-container">
-    <div class="">
-        <img class="poster" src="<%=movie.poster %>" alt="movie poster">
-    </div>
-    <div class="">
-        <h2><%=movie.title %> (<%=movie.year %>)</h2>
-        <p>Rated <%= movie.rated %></p>
-        <p><%=movie.genre %></p>
-        <table class="ratings">
-          <tr>
-            <th>IMDB</th>
-            <th>Rotten</th>
-            <th>Meta</th>
-          </tr>
-          <tr>
-            <td><%=movie.imdb %></td>
-            <td><%=movie.rotten %></td>
-            <td><%=movie.metacritic %></td>
-          </tr>
-        </table>
-        <p><%=movie.description %></p>
-    </div>
-    <div class="">
-        <iframe width="550" height="300" src="https://www.youtube.com/embed/<%=movie.trailer %>"></iframe>
+<div class="content">
+  <h1> <%= @actor.titleize %>'s <%=@type.capitalize %> Movies </h1>
+  <% @movies.each do |movie| %>
+  <div class="padded">
+    <div class="grid-container">
+      <div class="">
+          <img class="poster" src="<%=movie.poster %>" alt="movie poster">
+      </div>
+      <div class="">
+          <h2><%=movie.title %> (<%=movie.year %> <%=movie.rated %>)</h2>
+          <p><%=movie.genre %></p>
+          <p>Directed by <%=movie.director_list %></p>
+          <p>Staring 
+          <% movie.actors.each do |actor| %>
+            <%= button_to actor.name, "/movie_search?search_type=best&id=#{actor.id}", method: :post, class: "actor-link"%> 
+          <% end %>
+          </p>
+          <table class="ratings">
+            <tr>
+              <th>IMDB</th>
+              <th>Rotten</th>
+              <th>Meta</th>
+            </tr>
+            <tr>
+              <td><%=movie.imdb %></td>
+              <td><%=movie.rotten %></td>
+              <td><%=movie.metacritic %></td>
+            </tr>
+          </table>
+          <p class="ital"><%=movie.description %></p>
+      </div>
+      <div class="">
+          <iframe width="550" height="300" src="https://www.youtube.com/embed/<%=movie.trailer %>"></iframe>
+      </div>
     </div>
   </div>
-<% end %>
+  <% end %>
+
+  <%= button_to "next page", "/movie_search?p=2&search=#{@actor}&search_type=#{@type}", method: :post, class: "btn"%>
+</div>
