--- a/app/views/movie_search/index.html.erb
+++ b/app/views/movie_search/index.html.erb
@@ -1,3 +1,5 @@
+
+<% require 'i18n' %>
 <div class="content">
   <h1> <%= @actor.titleize %>'s <%=@type.capitalize %> Movies </h1>
   <% @movies.each do |movie| %>
@@ -10,9 +12,9 @@
           <h2><%=movie.title %> (<%=movie.year %> <%=movie.rated %>)</h2>
           <p><%=movie.genre %></p>
           <p>Directed by <%=movie.director_list %></p>
-          <p>Staring 
+          <p class="oneline">Staring 
           <% movie.actors.each do |actor| %>
-            <%= button_to actor.name, "/movie_search?search_type=best&id=#{actor.id}", method: :post, class: "actor-link"%> 
+            <%= button_to actor.name, "/movie_search?search_type=best&search=#{I18n.transliterate(actor.name)}", method: :post, class: "actor-link"%> 
           <% end %>
           </p>
           <table class="ratings">
@@ -30,7 +32,7 @@
           <p class="ital"><%=movie.description %></p>
       </div>
       <div class="">
-          <iframe width="550" height="300" src="https://www.youtube.com/embed/<%=movie.trailer %>"></iframe>
+          <iframe width="550" height="300" src="https://www.youtube.com/embed/<%=movie.trailer %>" allowfullscreen="allowfulllscreen"></iframe>
       </div>
     </div>
   </div>
