--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,15 @@
   <body>
 
     <div class="main_menu">
-      <a class='btn' href='/'>New Search</a>
+      <a class='btn left marged' href='/'>Home</a>
+      <section class="movie-search">
+      <%= form_tag "/movie_search" do %>
+        <%= select_tag :person_type, options_for_select(["Actor's","Director's"]), required: :true, class: "height-20"%>
+        <%= select_tag :search_type, options_for_select(["Best","Worst"]), required: :true, class: "height-20"%>
+        <%= text_field_tag :search, '', size: 75%>
+        <%= submit_tag "Search", class: "btn-20 heigh-20"%>
+      <% end %>
+      </section>
     </div>
     <%= yield %>
   </body>
