director search functional

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,7 +23,7 @@
   transform: scaleX(-1);
   background-size: cover;
 }
-.grid-container {
+.grid-3 {
   display: grid;
   /* grid-row-gap: 40px; */
   grid-template-columns: 250px 40vw auto;
@@ -31,6 +31,12 @@
   background-color: rgba(0,0,0,0.3);
   border-radius: 2px;
   border: 0.5px solid goldenrod;
+}
+.grid-2 {
+  display: grid;
+  /* grid-row-gap: 40px; */
+  grid-template-columns: 200px 200px;
+  padding: 10px;
 }
 .padded {
   padding-bottom: 10px;
