--- a/app/views/movie_search/index.html.erb
+++ b/app/views/movie_search/index.html.erb
@@ -1,42 +1,61 @@
 
 <% require 'i18n' %>
 <div class="content">
-  <h1> <%= @actor.titleize %>'s <%=@type.capitalize %> Movies </h1>
-  <% @movies.each do |movie| %>
-  <div class="padded">
-    <div class="grid-container">
-      <div class="">
-          <img class="poster" src="<%=movie.poster %>" alt="movie poster">
-      </div>
-      <div class="">
-          <h2><%=movie.title %> (<%=movie.year %> <%=movie.rated %>)</h2>
-          <p><%=movie.genre %></p>
-          <p>Directed by <%=movie.director_list %></p>
-          <p class="oneline">Staring 
-          <% movie.actors.each do |actor| %>
-            <%= button_to actor.name, "/movie_search?search_type=best&search=#{I18n.transliterate(actor.name)}", method: :post, class: "actor-link"%> 
-          <% end %>
-          </p>
-          <table class="ratings">
-            <tr>
-              <th>IMDB</th>
-              <th>Rotten</th>
-              <th>Meta</th>
-            </tr>
-            <tr>
-              <td><%=movie.imdb %></td>
-              <td><%=movie.rotten %></td>
-              <td><%=movie.metacritic %></td>
-            </tr>
-          </table>
-          <p class="ital"><%=movie.description %></p>
-      </div>
-      <div class="">
-          <iframe width="550" height="300" src="https://www.youtube.com/embed/<%=movie.trailer %>" allowfullscreen="allowfulllscreen"></iframe>
+  <% if @movies %>
+    <h1> <%= @actor.titleize %>'s <%=@type.capitalize %> Movies </h1>
+    <% @movies[0+(20*@page)..19+(20*@page)].each do |movie| %>
+    <div class="padded">
+      <div class="grid-3">
+        <div class="">
+            <img class="poster" src="<%=movie.poster %>" alt="movie poster">
+        </div>
+        <div class="">
+            <h2><%=movie.title %> (<%=movie.year %> <%=movie.rated %>)</h2>
+            <table class="ratings">
+              <tr>
+                <th>IMDB</th>
+                <th>Rotten</th>
+                <th>Meta</th>
+              </tr>
+              <tr>
+                <td><%=movie.imdb %></td>
+                <td><%=movie.rotten %></td>
+                <td><%=movie.metacritic %></td>
+              </tr>
+            </table>
+            <p><%=movie.genre %></p>
+            <div class="grid-2">
+              <div class="">
+                <p>Staring 
+                <% movie.actors.each do |actor| %>
+                  <%= button_to actor.name, "/movie_search?search_type=Best&person_type=Actor's&search=#{I18n.transliterate(actor.name)}", method: :post, class: "actor-link"%> 
+                <% end %>
+                </p>
+              </div>
+              <div class="">
+                <p>Directed by 
+                <% movie.directors.each do |director| %>
+                  <%= button_to director.name, "/movie_search?search_type=Best&person_type=Director's&search=#{I18n.transliterate(director.name)}", method: :post, class: "actor-link"%> 
+                <% end %>
+                </p>
+              </div>
+            </div>
+            <p class="ital"><%=movie.description %></p>
+        </div>
+        <div class="">
+            <iframe width="550" height="300" src="https://www.youtube.com/embed/<%=movie.trailer %>" allowfullscreen="allowfulllscreen"></iframe>
+        </div>
       </div>
     </div>
-  </div>
-  <% end %>
-
-  <%= button_to "next page", "/movie_search?p=2&search=#{@actor}&search_type=#{@type}", method: :post, class: "btn"%>
+    <% end %>
+    <% if @page > 0 %>
+      <%= link_to 'previous page', "/movie_search?page=back", class: "btn left marged"%>
+    <% end %>
+    <%# <br><br>
+    <br> %>
+    <%= link_to 'next page', "/movie_search?page=next", class: "btn left"%>
+    <br>
+  <% else %>
+    <p>No Search Results Found</p>
+  <%end %>
 </div>
