--- a/app/views/dbless_search/index.html.erb
+++ b/app/views/dbless_search/index.html.erb
@@ -1,8 +1,8 @@
 <% require 'i18n' %>
 <div class="content">
-  <% if @movies %>
-    <h1> <%= @actor.titleize %>'s <%=@type.capitalize %> Movies </h1>
-    <% @movies[0+(20*@page)..19+(20*@page)].each do |movie| %>
+  <% if @data[:movie_list] %>
+    <h1> <%= @data[:search].titleize %>'s <%=@data[:type].capitalize %> Movies </h1>
+    <% @data[:movie_list][0+(20*@data[:page])..19+(20*@data[:page])].each do |movie| %>
     <div class="padded">
       <div class="grid-3">
         <div class="">
@@ -47,7 +47,7 @@
       </div>
     </div>
     <% end %>
-    <% if @page > 0 %>
+    <% if @data[:page] > 0 %>
       <%= link_to 'previous page', "/movie_search?page=back", class: "btn left marged"%>
     <% end %>
     <%# <br><br>
