--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -103,8 +103,12 @@ body{
   background-color: rgba(0,0,0,0);
   color: goldenrod;
   border: 0;
-  font-weight:bold;
+  /* font-weight:bold; */
+  text-decoration: none;
 
+}
+.actor-link:hover{
+  text-decoration: underline;
 }
 .oneline {
   white-space: nowrap;
