--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,13 @@
 
     <div class="main_menu">
       <a class='btn left marged' href='/'>Home</a>
+      <% if current_user.nil? %>
+        <a class='btn left marged'  href="/auth/google_oauth2">Log In with Google</a>
+      <% else %>
+        <a class='btn left marged'  href="/profile">Profile</a>
+        <a class='btn left marged'  href="/logout">Logout</a>
+      <% end %>
+      </section>
       <section class="movie-search">
       <%= form_tag "/dbless_search", method: "get" do %>
         <%= select_tag :person_type, options_for_select(["Actor's","Director's"]), required: :true, class: "height-20"%>
@@ -20,13 +27,7 @@
         <%= text_field_tag :search, '', size: 75%>
         <%= submit_tag "Search", class: "btn-20 heigh-20"%>
       <% end %>
-      <% if current_user.nil? %>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/auth/google_oauth2">Log In with Google</a></li>
-      <% else %>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/profile">Profile</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/logout">Logout</a></li>
-      <% end %>
-      </section>
+
     </div>
     <% flash.each do |type, message| %>
       <section class=<%= type %>>
