--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -1,3 +1,14 @@
 <div class="content">
+  <div class="indent">
 
-  <h1>Search for Reely Good or Reely Bad Movies</h1>
+    <h1>Reely</h1>
+    <div class="yellow">
+      <h2>Search for an actors or directors best... or worst movies</h2>
+      <h3>Searches must be an exact match</h3>
+      <h3>Follow links to browse movies by the director or actors in the same cast</h3>
+      <h3>Logged in users can save movies to their profile</h3>
+      <br>
+      <h3>Please allow a few moments for loading as movie data is populated from IMDB, Rotten Tomatoes, and MetaCritic</h3>
+    </div>
+  </div>
+</div>
