--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -1,14 +1,18 @@
 <div class="content">
   <div class="indent">
 
-    <h1>Reely</h1>
-    <div class="yellow">
+    <h1 class="BlockLetter huge shadow">Reely</h1>
+    <div class="white credits">
       <h2>Search for an actors or directors best... or worst movies</h2>
-      <h3>Searches must be an exact match</h3>
-      <h3>Follow links to browse movies by the director or actors in the same cast</h3>
-      <h3>Logged in users can save movies to their profile</h3>
-      <br>
-      <h3>Please allow a few moments for loading as movie data is populated from IMDB, Rotten Tomatoes, and MetaCritic</h3>
+      <div class="">
+        <div class="border ital">
+          <p>* Searches must be an exact match</p>
+          <p>* Follow links to browse movies by the director or actors in the same cast</p>
+          <p>* Logged in users can save movies to their profile</p>
+        </div>
+        <br>
+        <h2>Please allow a few moments for loading as movie data is populated from multiple APIs</h2>
+      </div>
     </div>
 
   </div>
