attempt to update font location

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
   </head>
 
   <body>
+    <div id="loader-wrapper">
+      <div id="loader"></div>
+
+      <div class="loader-section section-left"></div>
+      <div class="loader-section section-right"></div>
+
+    </div>
 
     <div class="main_menu">
       <a class='btn left marged' href='/'>Home</a>
@@ -35,5 +42,11 @@
       </section>
     <% end %>
     <%= yield %>
+
+    <script> src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')
+    </script>
+    <script src="js/main.js"> </script>
+
   </body>
 </html>
