--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -44,14 +44,14 @@
 }
 
 .BlockLetter {
-  font-family: 'BlockLetter';
+  font-family: 'Arial';
 }
 
 .RoadMovie {
-  font-family: 'RoadMovie'
+  font-family: 'Arial'
 }
 .credits {
-  font-family: 'Credits'
+  font-family: 'Arial'
 }
 .huge {
   font-size: 100px;
