update button font

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -127,7 +127,7 @@ body{
   color: black;
 }
 .main_menu {
-  font-family:"anodina-light";
+  font-family:"arial";
   /* background-color:black; */
   overflow:hidden;
   height: 40px;
