--- a/app/views/streaming/index.html.erb
+++ b/app/views/streaming/index.html.erb
@@ -9,7 +9,7 @@
             <% end %>
         </div>
         <div class="underline">
-            <h2><a href="/movies/<%=@movie.id%>/streaming", class="link-title"><%=@movie.title%> (<%=@movie.year %> <%=@movie.rated %>)</a></h2>
+            <h2><%=@movie.title%> (<%=@movie.year %> <%=@movie.rated %>)</h2>
             <p><%=@movie.genre %></p>
             <table class="ratings">
               <tr>
@@ -77,7 +77,17 @@
         </div>
       </div>
       <div class="streaming-options">
-        
+        <table>
+          <tr>
+            <th></th>
+            <th></th>
+          </tr>
+          <tr>
+
+            <td></td>
+            <td></td>
+          </tr>
+        </table>
       
       </div>
 
